--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,92 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+	/* Colors */
+	--light-orange: #f9a109;
+	--dark-shades: #97969c;
+	--light-blue-shades: #cccccd;
+	--light-blue-bg: #fafafe;
+	--light-blue: #56ccf2;
+	--dark-bg: #80485b;
+	--light-red: #eb5757;
+	--white: #ffffff;
+	--black: #000000;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	/* Font Size */
+	--h1-titulos: 2.6rem;
+	--h2-titulos: 2.4rem;
+	--h3-productos: 1.8rem;
+	--p-parrafos: 1.4rem;
+	--h4-secciones: 1.4rem;
+	--h5-contador: 1.2rem;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+	font-size: 62.5%;
+	font-family: 'Quicksand', sans-serif;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	background-color: #f7f4f4;
+	font-family: 'Quicksand', sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.layout {
+	display: flex;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.input-wrapper {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
-button:hover {
-  border-color: #646cff;
+.input-input {
+	/* background-color: var(--light-orange); */
+	padding: 0.5rem;
+	outline-color: var(--light-orange);
+	border-radius: 1.2rem;
+	border: 0.2rem solid var(--light-blue-shades);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.input-label {
+	font-weight: bold;
+	font-size: 1.35rem;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.btn {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 1rem 0 0;
+	margin-inline: auto;
+	border-style: none;
+	border-radius: 1rem;
+	cursor: pointer;
+}
+
+.btn-primary {
+	background-color: var(--light-orange);
+	color: white;
+}
+
+.btn-secondary {
+}
+
+.btn-small {
+	height: 3rem;
+	font-size: 1.35rem;
+	padding-inline: 2rem;
+}
+
+.btn-regular {
+	height: 3.5rem;
+	padding-inline: 2.5rem;
+}
+
+.btn-large {
+	height: 4rem;
+	padding-inline: 2.5rem;
 }
